# Expressionist

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  PURPOSE.md  README.md
.github/workflows/: ci.yml  docs.yml
cli/: main.cpp
docs/: doxygen-extra.css
example/: main.cpp
include/: expressionist_c.h
python/expressionist/: __init__.py
src/: expressionist.hpp  expressionist_c.cpp
test/: CMakeLists.txt  test_arithmetic.cpp  test_benchmark.cpp  test_booleans.cpp  test_common.hpp  test_disable.cpp  test_errors.cpp  test_functions.cpp  test_nested.cpp  test_ordering.cpp  test_overloads.cpp  test_produce.cpp  test_ranges.cpp
test/python/: test_c_api.py
